Solved overflow image problems

--- a/components/Blogs/Blogs.module.scss
+++ b/components/Blogs/Blogs.module.scss
@@ -63,7 +63,7 @@
     width: 30%;
     height: 100%;
     min-height: 300px;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
   }
